Fixed icon button on mobile view

--- a/packages/client-core/src/components/ConferenceMode/index.module.scss
+++ b/packages/client-core/src/components/ConferenceMode/index.module.scss
@@ -203,6 +203,7 @@
 
       @media (max-width: 768px) {
         margin: 0;
+        padding: 8px;
         border-radius: 50px;
         display: flex;
         justify-content: center;
