--- a/packages/client-core/src/components/UserMediaWindow/index.module.scss
+++ b/packages/client-core/src/components/UserMediaWindow/index.module.scss
@@ -175,6 +175,7 @@
 
       @media (max-width: 768px) {
         margin: 0;
+        padding: 8px;
         border-radius: 50px;
         display: flex;
         justify-content: center;
